<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="400dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/mHeader"
        android:layout_marginBottom="27dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingTop="30dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageCropLover"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_update_black_24dp"/>

    </LinearLayout>

    <TextView
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upgrate_version"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mHeader"
        app:layout_constraintVertical_bias="0.09"
        tools:layout_editor_absoluteX="0dp">

    </TextView>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="228dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/upgrate_version_1"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mButtonUpgrateNo"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="48dp"
            android:backgroundTint="@color/xam"
            android:text="@string/rating_button_no"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mButtonUpgrateYes"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="150dp"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/rating_button_yes"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>